# googleads_konami_autobidder

./: .dockerignore  Dockerfile  README.md  autobidder.py  bidchange.py  campaign_input.csv  main.py  pyproject.toml  requirements.txt
scripts/: deploy.py
utils/: build_gads_client.py  calculate_bid.py  config.py  date_formatters.py  db.py  gads_bidchange.py  google_ads_integration.py  historical_data.py
