[tool.poetry]
name = "googleads-konami-autobidder"
version = "0.1.0"
description = ""
authors = ["leonardo black <leonardo.black@bairesdev.com>"]

[tool.poetry.dependencies]
python = "^3.10"
SQLAlchemy = "^1.4.36"
pandas = "^1.4.2"
pyodbc = "^4.0.32"
google-ads = "^16.0.0"
google-api-python-client = "^2.47.0"
google-auth-httplib2 = "^0.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
